--- a/blog.html
+++ b/blog.html
@@ -48,56 +48,76 @@
   </header>
 
   <!-- Blog Posts Grid -->
-  <main class="max-w-6xl mx-auto px-4 pb-20 grid gap-10 md:grid-cols-2 lg:grid-cols-3">
-    <!-- Individual blog post cards -->
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-safer-online.jpg" alt="5 Ways to Stay Safer Online" class="w-full h-auto" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/safer-online-now.html">5 Ways to Stay Safer Online Right Now</a></h2>
-        <p class="text-gray-300 text-sm">Quick, actionable cybersecurity advice for real people and small businesses. Start here.</p>
-      </div>
-    </article>
+ <main class="max-w-6xl mx-auto px-4 pb-20 grid gap-10 md:grid-cols-2 lg:grid-cols-3">
 
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-tech-support.png" alt="Tech Support Scam" class="w-full h-auto" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/tech-support-scam-warning.html">How to Tell If That Tech Support Call Is a Scam</a></h2>
-        <p class="text-gray-300 text-sm">Don’t get tricked by cold-callers claiming your account was hacked. Learn how to spot the red flags.</p>
-      </div>
-    </article>
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-safer-online.jpg" alt="5 Ways to Stay Safer Online" class="w-full h-auto" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
+        <a href="/posts/safer-online-now.html">5 Ways to Stay Safer Online Right Now</a>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: July 15, 2025</p>
+      <p class="text-gray-300 text-sm">Quick, actionable cybersecurity advice for real people and small businesses. Start here.</p>
+    </div>
+  </article>
 
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-wordpress.jpg" alt="WordPress Security" class="w-full h-auto" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/wordpress-security-basics.html">Basic WordPress Security for Beginners</a></h2>
-        <p class="text-gray-300 text-sm">WordPress makes it easy to launch a site, but simplicity comes with security risks.</p>
-      </div>
-    </article>
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-tech-support.png" alt="Tech Support Scam" class="w-full h-auto" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
+        <a href="/posts/tech-support-scam-warning.html">How to Tell If That Tech Support Call Is a Scam</a>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: July 10, 2025</p>
+      <p class="text-gray-300 text-sm">Don’t get tricked by cold-callers claiming your account was hacked. Learn how to spot the red flags.</p>
+    </div>
+  </article>
 
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-tools.jpg" alt="Free Tools I Trust" class="w-full h-auto" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/free-tools-i-trust.html">Free Tools I Trust</a></h2>
-        <p class="text-gray-300 text-sm">Not every cybersecurity tool costs money—or your sanity.</p>
-      </div>
-    </article>
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-wordpress.jpg" alt="WordPress Security" class="w-full h-auto" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
+        <a href="/posts/wordpress-security-basics.html">Basic WordPress Security for Beginners</a>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: July 5, 2025</p>
+      <p class="text-gray-300 text-sm">WordPress makes it easy to launch a site, but simplicity comes with security risks.</p>
+    </div>
+  </article>
 
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-ports.png" alt="Open Ports Explained" class="w-full h-48 object-cover" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/closing-ports-backdoors.html">Are Open Ports a Backdoor?</a></h2>
-        <p class="text-gray-300 text-sm">Open ports are like doors into your system. Some are needed. Some aren't.</p>
-      </div>
-    </article>
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-tools.jpg" alt="Free Tools I Trust" class="w-full h-auto" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
+        <a href="/posts/free-tools-i-trust.html">Free Tools I Trust</a>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: June 30, 2025</p>
+      <p class="text-gray-300 text-sm">Not every cybersecurity tool costs money—or your sanity.</p>
+    </div>
+  </article>
 
-    <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
-      <img src="/assets/thumb-rural.jpg" alt="Rural Cybersecurity" class="w-full h-auto" />
-      <div class="p-6">
-        <h2 class="text-xl font-bold text-teal-300 mb-2"><a href="/posts/rural-cybersecurity.html">Why Rural Businesses Can’t Ignore Cybersecurity</a></h2>
-        <p class="text-gray-300 text-sm">When folks think about hackers, they picture big cities. That’s a mistake.</p>
-      </div>
-    </article>
-  </main>
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-ports.png" alt="Open Ports Explained" class="w-full h-48 object-cover" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
+        <a href="/posts/closing-ports-backdoors.html">Are Open Ports a Backdoor?</a>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: June 25, 2025</p>
+      <p class="text-gray-300 text-sm">Open ports are like doors into your system. Some are needed. Some aren't.</p>
+    </div>
+  </article>
+
+  <article class="bg-gray-800 rounded-lg overflow-hidden shadow-lg">
+    <img src="/assets/thumb-rural.jpg" alt="Rural Cybersecurity" class="w-full h-auto" />
+    <div class="p-6">
+      <h2 class="text-xl font-bold text-teal-300 mb-1">
+        <a href="/posts/rural-cybersecurity.html">Why Rural Businesses Can’t Ignore Cybersecurity</a>
+      </h2>
+      <p class="text-gray-400 text-xs mb-3">Published: June 20, 2025</p>
+      <p class="text-gray-300 text-sm">When folks think about hackers, they picture big cities. That’s a mistake.</p>
+    </div>
+  </article>
+
+</main>
+
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-gray-500 text-center p-6 text-sm mt-auto max-w-3xl mx-auto rounded-md">
