--- a/maintenance.html
+++ b/maintenance.html
@@ -25,12 +25,11 @@
   </head>
   <body class="relative h-screen w-screen bg-black text-white overflow-hidden">
     <!-- Background Image -->
-    <div
-      class="absolute inset-0 bg-cover bg-center opacity-30"
-      style="background-image: url('/irondillo-site/assets/Cyber-stasis.png');"
-
-
+   <div
+  class="absolute inset-0 bg-cover bg-center opacity-30"
+  style="background-image: url('assets/Cyber-stasis.png');"
     ></div>
+
 
     <!-- Dark Overlay -->
     <div class="absolute inset-0 bg-black bg-opacity-70 z-10"></div>
