--- a/maintenance.html
+++ b/maintenance.html
@@ -25,7 +25,12 @@
 <body class="relative h-screen w-screen bg-black text-white overflow-hidden">
 
   <!-- Background Image -->
-  <img src="/assets/Cyber-stasis.png" alt="Cyberstasis Background" class="absolute inset-0 w-full h-full object-cover opacity-30 -z-10"/>
+ <img
+  src="https://username.github.io/irondillo-site/assets/Cyber-stasis.png"
+  alt="Cyberstasis Background"
+  class="absolute inset-0 w-full h-full object-cover opacity-30 -z-10"
+/>
+
 
   <!-- Dark Overlay -->
   <div class="absolute inset-0 bg-black bg-opacity-70 z-10"></div>
