--- a/maintenance.html
+++ b/maintenance.html
@@ -29,6 +29,7 @@
   src="https://artilleryjoe.github.com/irondillo-site/assets/Cyber-stasis.png"
   alt="Cyberstasis Background"
   class="absolute inset-0 w-full h-full object-cover opacity-30 -z-10"
+  style="filter: brightness(1.3);"
 />
 
   <!-- Scrolling Matrix Text -->
