--- a/maintenance.html
+++ b/maintenance.html
@@ -26,10 +26,10 @@
 
   <!-- Background Image -->
  <img
-  src="https://artilleryjoe.github.com/irondillo-site/assets/Cyber-stasis.png"
+  src="https://raw.githubusercontent.com/artilleryjoe/irondillo-site/main/assets/Cyber-stasis.png"
   alt="Cyberstasis Background"
   class="absolute inset-0 w-full h-full object-cover opacity-30 -z-10"
-   style="filter: brightness(1.3);"
+  style="filter: brightness(1.3);"
 />
 
   <!-- Scrolling Matrix Text -->
