--- a/maintenance.html
+++ b/maintenance.html
@@ -28,7 +28,7 @@
  <img
   src="https://raw.githubusercontent.com/artilleryjoe/irondillo-site/main/assets/Cyber-stasis.png"
   alt="Cyberstasis Background"
-  class="absolute inset-0 w-full h-full object-cover opacity-30 -z-10"
+  class="absolute inset-0 w-full h-full object-contain opacity-30 -z-10"
   style="filter: brightness(1.3);"
 />
 
