--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>About | Iron Dillo Cybersecurity</title>
-  <meta name="description" content="Iron Dillo Cybersecurity is a veteran-owned consultancy providing trustworthy cybersecurity solutions to individuals and small businesses in East Texas and rural communities." />
+  <meta name="description" content="Learn more about Iron Dillo Cybersecurity, a veteran-owned business protecting East Texas individuals and small businesses with practical, trustworthy security solutions." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -14,43 +14,99 @@
 </head>
 <body class="flex flex-col min-h-screen bg-gray-900 text-gray-100 font-sans">
 
-  <!-- Header with logo and navigation -->
-  <header class="p-8 text-center max-w-3xl mx-auto fade-in">
-    <img src="/assets/IronDilloLogo.png" alt="IronDillo logo" class="mx-auto mb-6 w-32 h-auto" />
-    <h1 class="text-4xl font-extrabold text-teal-400 mb-4">Iron Dillo Cybersecurity</h1>
-
-    <!-- Navigation -->
-    <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
-      <div class="flex justify-between">
-        <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
-        <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
-        <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
-        <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
-      </div>
-    </nav>
+  <!-- Header -->
+  <header class="text-center pt-8 max-w-3xl mx-auto fade-in">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
   </header>
 
-  <!-- About Content -->
-  <main class="flex-grow max-w-4xl mx-auto px-6 pb-16 fade-in">
-    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
-      <h2 class="text-3xl font-semibold text-teal-400 mb-6">About Iron Dillo Cybersecurity</h2>
-      <p class="text-gray-300 leading-relaxed mb-4">
-        <span class="text-white font-medium">Iron Dillo Cybersecurity</span> is a veteran-owned consultancy providing practical, trustworthy solutions for individuals and small businesses—especially those in <span class="text-white font-medium">East Texas</span> and rural communities. We believe everyone deserves clear, ethical guidance to protect their digital lives.
-      </p>
-      <p class="text-gray-300 leading-relaxed mb-4">
-        Our approach is rooted in <span class="text-white font-medium">discipline</span>, <span class="text-white font-medium">integrity</span>, and a commitment to demystifying cybersecurity. Whether you're securing your first website or navigating complex threats, we deliver hands-on support tailored to your needs.
-      </p>
+  <!-- Navigation -->
+  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto fade-in">
+    <div class="flex justify-between">
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
+  <main class="flex-grow max-w-3xl mx-auto px-6 py-12 space-y-12 fade-in">
+    
+    <!-- Intro -->
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8 text-center">
+      <h1 class="text-3xl font-bold text-teal-400 mb-4">About Iron Dillo Cybersecurity</h1>
       <p class="text-gray-300 leading-relaxed">
-        Iron Dillo was founded by a <span class="text-white font-medium">U.S. Army combat veteran</span> and cybersecurity professional who blends technical expertise with a straightforward, human approach. We aim to help those overlooked by larger firms build safer digital foundations—one client at a time.
+        Iron Dillo Cybersecurity is a veteran-owned business dedicated to protecting individuals,
+        small businesses, and rural communities across East Texas with practical, trustworthy cybersecurity solutions.
       </p>
+    </section>
+
+    <!-- Story -->
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Meet Kris McCoy</h2>
+      <p class="text-gray-300 leading-relaxed">
+        I served in the U.S. Army in field artillery during Operation Enduring Freedom. After my service,
+        I earned a Master of Science in Cybersecurity with distinction and continued my education through
+        the WGU Business School. Today, I’m proud to be active in the East Texas business community,
+        including our local Chamber of Commerce.
+      </p>
+      <p class="text-gray-300 leading-relaxed mt-4">
+        I am pursuing professional certifications to further strengthen my ability to serve clients,
+        and I bring the same discipline, vigilance, and integrity from my military service into every project.
+      </p>
+    </section>
+
+    <!-- Ethics Commitment -->
+    <section class="bg-gray-800 rounded-lg shadow-lg p-8">
+      <h2 class="text-2xl font-semibold text-teal-300 mb-4">Commitment to Professional Ethics</h2>
+      <p class="text-gray-300 leading-relaxed">
+        As a member of <span class="font-semibold text-white">ISC2</span>, I keep their 
+        <a href="https://www.isc2.org/Ethics" target="_blank" class="text-teal-400 hover:underline">
+          Code of Ethics
+        </a> close to heart in this work. 
+        These principles emphasize protecting society and the common good, acting with honesty and diligence, 
+        delivering competent service to those I serve, and advancing the cybersecurity profession for the future.
+      </p>
+      <p class="text-gray-300 leading-relaxed mt-4">
+        For my clients, this means every engagement is conducted with transparency, responsibility, and 
+        a commitment to solutions that put their security and trust first.
+      </p>
+    </section>
+
+    <!-- Values -->
+    <section class="py-12 grid gap-6 md:grid-cols-3 text-center">
+      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+        <h3 class="text-xl font-bold text-teal-400 mb-2">Integrity</h3>
+        <p class="text-gray-300 text-sm">Honest, ethical guidance in every engagement.</p>
+      </div>
+      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+        <h3 class="text-xl font-bold text-teal-400 mb-2">Discipline</h3>
+        <p class="text-gray-300 text-sm">A veteran’s focus on detail and thoroughness.</p>
+      </div>
+      <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+        <h3 class="text-xl font-bold text-teal-400 mb-2">Resilience</h3>
+        <p class="text-gray-300 text-sm">Helping your business prepare, withstand, and recover from threats.</p>
+      </div>
+    </section>
+
+    <!-- Call to Action -->
+    <section class="bg-gray-900 py-12 text-center">
+      <h2 class="text-2xl font-bold text-white mb-4">Ready to Secure Your Business</h2>
+      <p class="text-gray-300 max-w-xl mx-auto">
+        Iron Dillo Cybersecurity is here to provide straightforward, hands-on support for East Texas 
+        individuals and businesses. Let’s talk about the right plan for your needs.
+      </p>
+      <a href="/contact.html" class="mt-6 inline-block bg-teal-500 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-teal-600 transition">
+        Contact Me Today
+      </a>
     </section>
   </main>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md">
-    &copy; 2025 Iron Dillo. All rights reserved. | 
-    <a href="/privacy.html" class="hover:underline">Privacy</a> | 
-    <a href="/terms.html" class="hover:underline">Terms</a>
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-auto text-sm max-w-3xl mx-auto rounded-md fade-in">
+    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
   </footer>
 
 </body>
