--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,11 +11,29 @@
   <!-- Google reCAPTCHA v2 -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
-<body class="bg-gray-900 text-gray-100 min-h-screen flex items-center justify-center p-4">
+<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col font-sans">
 
-  <main class="max-w-xl w-full bg-gray-800 rounded-lg p-8 shadow-lg">
+  <!-- Header -->
+  <header class="text-center pt-8 max-w-3xl mx-auto">
+    <img src="/assets/IronDilloLogo.png" alt="IronDillo cybersecurity logo" class="mx-auto mb-6 w-36 h-auto" />
+  </header>
+
+  <!-- Navigation -->
+  <nav class="bg-gray-800 py-3 rounded-md mb-8 max-w-xl mx-auto">
+    <div class="flex justify-between">
+      <a href="/index.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Home</a>
+      <a href="/services.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Services</a>
+      <a href="/about.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">About</a>
+      <a href="/contact.html" class="text-teal-400 font-semibold hover:underline px-4 tracking-wide uppercase">Contact</a>
+    </div>
+  </nav>
+
+  <!-- Main Contact Form -->
+  <main class="flex-grow max-w-xl w-full bg-gray-800 rounded-lg p-8 shadow-lg mx-auto">
     <h1 class="text-4xl font-extrabold text-teal-400 mb-6 text-center">Contact Iron Dillo</h1>
-    <p class="text-gray-300 mb-8 text-center">Have a cybersecurity question? Want to schedule a consult? Reach out below and we’ll get back to you soon.</p>
+    <p class="text-gray-300 mb-8 text-center">
+      Have a cybersecurity question? Want to schedule a consult? Fill out the form below and I’ll respond as soon as possible.
+    </p>
 
     <form
       id="contact-form"
@@ -24,7 +42,7 @@
       class="space-y-6"
       onsubmit="return onSubmit(event)"
     >
-      <!-- Honeypot Field (hidden from humans) -->
+      <!-- Honeypot Field -->
       <div style="display:none;">
         <label for="gotcha">Leave this empty</label>
         <input type="text" name="_gotcha" id="gotcha" autocomplete="off" />
@@ -68,17 +86,27 @@
         ></textarea>
       </div>
 
-      <!-- Google reCAPTCHA v2 Checkbox widget -->
+      <!-- reCAPTCHA -->
       <div class="g-recaptcha" data-sitekey="6LdCtosrAAAAAGddw60skAwbV91b2UmEAuLaSLYb"></div>
+
+      <!-- Optional Redirect -->
+      <input type="hidden" name="_next" value="/thank-you.html" />
 
       <button
         type="submit"
-        class="w-full bg-teal-400 text-gray-900 font-extrabold py-3 rounded hover:bg-teal-500 transition-colors duration-200"
+        class="w-full mt-4 bg-teal-400 text-gray-900 font-extrabold py-3 rounded hover:bg-teal-500 transition-colors duration-200"
       >
         Send Message
       </button>
     </form>
   </main>
+
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-gray-500 text-center p-6 mt-8 text-sm max-w-3xl mx-auto rounded-md">
+    &copy; 2025 Iron Dillo. All rights reserved. | Veteran-Owned | 
+    <a href="/privacy.html" class="hover:underline text-teal-400">Privacy</a> | 
+    <a href="/terms.html" class="hover:underline text-teal-400">Terms</a>
+  </footer>
 
   <script>
     // Prevent form submit if reCAPTCHA not verified
@@ -92,6 +120,5 @@
       return true;
     }
   </script>
-
 </body>
 </html>
